# native-vs-evm

./: .env.example  Cargo.toml  README.md
benches/: evm_benchmark.rs  math_benchmark.rs
src/: evm.rs  main.rs
tests/: evm_tests.rs
