[package]
name = "native-vs-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
ruint = "1.17.0"
alloy = "1.0.22"
url = "2.5.7"

[dev-dependencies]
criterion = "0.5.1"
revm = "33.1.0"

[[bench]]
name = "evm_benchmark"
harness = false

[[bench]]
name = "math_benchmark"
harness = false
